--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 		<div class="box box2">Block 2</div>
 		<div class="box box3">Block 3</div>
 		<div class="box box4">Block 4</div>
-		<img src="	https://www.figma.com/design/lEky1r2DCL2ABL2l4DdSwm/Figma-basics?node-id=4368-321173&m=dev
-		" alt="">
+		<div class="box box4">Block 5</div>
+		<div class="box box4">Block 6</div>
+	
 	</div>
-	https://www.figma.com/design/lEky1r2DCL2ABL2l4DdSwm/Figma-basics?node-id=4368-321173&m=dev
+
 
 </body>
 </html>
